--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,7 +5,7 @@ body {
   text-align: center;
   color: #eee;
   background-size: cover;
-  background-image: asset-url("herokanagawa.jpg");
+  background-color: #652caa;
   font-family: "BentonSans", "Helvetica Neue", sans-serif;
 }
 
